2024-02-19T01:02:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7953088022 # 129
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 616 1058 / 623 1070
* notice: next accum: outdated-unq outdated-all / unq all: 617 1060 / 623 1070
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-04] / []

2024-02-18T01:05:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7945513262 # 126
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
* notice: last 14d: unq all: 2 12
* notice: prev accum: outdated-unq outdated-all / unq all: 615 1056 / 623 1070
* notice: next accum: outdated-unq outdated-all / unq all: 616 1058 / 623 1070
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-03] / []

2024-02-17T01:00:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7938138336 # 123
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 2 14
* notice: prev accum: outdated-unq outdated-all / unq all: 614 1054 / 623 1070
* notice: next accum: outdated-unq outdated-all / unq all: 615 1056 / 623 1070
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-02] / []

2024-02-16T01:01:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7924464743 # 120