@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-19T01:02:57Z",
-  "count_outdated" : 1060,
-  "uniques_outdated" : 617,
+  "timestamp" : "2024-02-20T01:00:47Z",
+  "count_outdated" : 1063,
+  "uniques_outdated" : 619,
   "count" : 1070,
   "uniques" : 623,
   "clones" : [
-    {
-      "timestamp": "2024-02-05T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-02-06T00:00:00Z",
       "count": 2,
