@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 2,
+  "count": 7,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-02-05T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-02-06T00:00:00Z",
       "count": 2,
