@@ -1,3 +1,12 @@
+2024-02-20T01:00:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7966951771 # 132
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 617 1060 / 623 1070
+* notice: next accum: outdated-unq outdated-all / unq all: 619 1063 / 623 1070
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-02-05] / []
+
 2024-02-19T01:02:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7953088022 # 129
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
